# riscv-rust-quickstart

./: Cargo.toml
.github/workflows/: crosscompile.yml
